[gd_scene load_steps=25 format=3 uid="uid://bbaq72ngobmw1"]

[ext_resource type="Texture2D" uid="uid://biypnnv8oumla" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_pohw4"]
[ext_resource type="Script" path="res://player/Player Scripts/player.gd" id="1_tjkta"]
[ext_resource type="Script" path="res://player/Player Scripts/Status Progression.gd" id="3_l1nxw"]
[ext_resource type="Script" path="res://player/Player Scripts/DoAttack.gd" id="3_lu7xg"]
[ext_resource type="Texture2D" uid="uid://b3737ag182t8y" path="res://addons/kenney_particle-pack/PNG (Transparent)/star_08.png" id="3_tq043"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xe4tq"]
radius = 15.0

[sub_resource type="Animation" id="Animation_621t3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.28319]
}

[sub_resource type="Animation" id="Animation_f4d78"]
resource_name = "attack_down_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["down"],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_iasmo"]
resource_name = "attack_down_2"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["down", true],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_cwwtq"]
resource_name = "attack_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["side"],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_atm1u"]
resource_name = "attack_side_2"
length = 0.48
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["side", true],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_3xkvf"]
resource_name = "attack_up_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["up"],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_8knbd"]
resource_name = "attack_up_2"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scripts/DoAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["up", true],
"method": &"apply_damage"
}, {
"args": [],
"method": &"set_can_flip_true"
}, {
"args": [],
"method": &"attack_is_finished"
}]
}

[sub_resource type="Animation" id="Animation_x8t33"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-6.28319, 6.28319]
}

[sub_resource type="Animation" id="Animation_t3y1f"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_djwyv"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3ufe"]
_data = {
"RESET": SubResource("Animation_621t3"),
"attack_down_1": SubResource("Animation_f4d78"),
"attack_down_2": SubResource("Animation_iasmo"),
"attack_side_1": SubResource("Animation_cwwtq"),
"attack_side_2": SubResource("Animation_atm1u"),
"attack_up_1": SubResource("Animation_3xkvf"),
"attack_up_2": SubResource("Animation_8knbd"),
"die": SubResource("Animation_x8t33"),
"idle": SubResource("Animation_t3y1f"),
"run": SubResource("Animation_djwyv")
}

[sub_resource type="Animation" id="Animation_ujimd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AnimationPlayer/../CriticalEffect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%AnimationPlayer/../CriticalEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.075, 0.075)]
}

[sub_resource type="Animation" id="Animation_qraqg"]
resource_name = "critical_effect"
length = 0.55
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AnimationPlayer/../CriticalEffect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.02, 0.32, 0.52),
"transitions": PackedFloat32Array(1, 1, 0.31864),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%AnimationPlayer/../CriticalEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.02, 0.52),
"transitions": PackedFloat32Array(0.277393, 1),
"update": 0,
"values": [Vector2(0.075, 0.075), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pk62u"]
_data = {
"RESET": SubResource("Animation_ujimd"),
"critical_effect": SubResource("Animation_qraqg")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mkqyb"]
radius = 12.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tfs0v"]
radius = 35.0002
height = 122.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo4p8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q85dn"]
bg_color = Color(1, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
rotation = -6.28319
motion_mode = 1
script = ExtResource("1_tjkta")
sword_damage = 23
max_health = 1000
max_enemies_knockback = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_pohw4")
hframes = 6
vframes = 8

[node name="Body2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.999969, -7)
shape = SubResource("CapsuleShape2D_xe4tq")
debug_color = Color(0, 0.6, 0.701961, 0.407843)

[node name="Scripts" type="Node2D" parent="."]

[node name="DoAttack" type="Node" parent="Scripts"]
script = ExtResource("3_lu7xg")

[node name="Status Progression" type="Node" parent="Scripts"]
script = ExtResource("3_l1nxw")

[node name="AnimationPlayers" type="Node2D" parent="."]

[node name="MainPlayer" type="AnimationPlayer" parent="AnimationPlayers"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_y3ufe")
}
autoplay = "idle"

[node name="CriticalEffectPlayer" type="AnimationPlayer" parent="AnimationPlayers"]
unique_name_in_owner = true
root_node = NodePath("../MainPlayer")
libraries = {
"": SubResource("AnimationLibrary_pk62u")
}

[node name="Colliders&Areas" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Colliders&Areas" groups=["player"]]
unique_name_in_owner = true
position = Vector2(8.93276e-06, -2)

[node name="HitBox" type="CollisionShape2D" parent="Colliders&Areas/Area2D"]
visible = false
position = Vector2(9.3794e-05, -21)
shape = SubResource("CapsuleShape2D_mkqyb")
debug_color = Color(0, 0.6, 0.701961, 0.517647)

[node name="SwordAreaRight" type="Area2D" parent="Colliders&Areas"]
unique_name_in_owner = true
visible = false
position = Vector2(41.0001, -30.9998)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders&Areas/SwordAreaRight"]
shape = SubResource("CapsuleShape2D_tfs0v")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="SwordAreaLeft" type="Area2D" parent="Colliders&Areas"]
unique_name_in_owner = true
visible = false
position = Vector2(-40.9999, -31.0002)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders&Areas/SwordAreaLeft"]
shape = SubResource("CapsuleShape2D_tfs0v")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="SwordAreaUp" type="Area2D" parent="Colliders&Areas"]
unique_name_in_owner = true
visible = false
position = Vector2(0.000415373, -93)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders&Areas/SwordAreaUp"]
shape = SubResource("CapsuleShape2D_tfs0v")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="SwordAreaDown" type="Area2D" parent="Colliders&Areas"]
unique_name_in_owner = true
visible = false
position = Vector2(-0.000165256, 37)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders&Areas/SwordAreaDown"]
shape = SubResource("CapsuleShape2D_tfs0v")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="CriticalEffect" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 90
position = Vector2(51, -5.99978)
scale = Vector2(0.075, 0.075)
texture = ExtResource("3_tq043")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = -999
offset_left = -91.0
offset_top = 6.975
offset_right = 96.0
offset_bottom = 33.975
theme_override_styles/background = SubResource("StyleBoxFlat_uo4p8")
theme_override_styles/fill = SubResource("StyleBoxFlat_q85dn")
value = 100.0
show_percentage = false
